# cs-files-zh-en

./: .gitignore  README.md  index.js  pyproject.toml
src/cs_files_zh_en/: __init__.py  config.py  downloader.py  main.py
src/cs_files_zh_en/auth/: steam_auth.py
src/cs_files_zh_en/cdn/: steam_cdn.py
src/cs_files_zh_en/demo/: downloader.py
src/cs_files_zh_en/utils/: file_utils.py
src/cs_files_zh_en/vpk/: vpk_handler.py
static/: csgo_schinese.txt
